--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,39 @@
 # Dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Testing
-/coverage
+# Production build
+build/
+dist/
 
-# Production
-/build
-
-# Misc
-.DS_Store
+# Environment variables
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
 # Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+logs
+*.log
 
 # Runtime data
 pids
@@ -33,36 +47,11 @@ coverage/
 # nyc test coverage
 .nyc_output
 
-# Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
-.grunt
-
-# Bower dependency directory (https://bower.io/)
-bower_components
-
-# node-waf configuration
-.lock-wscript
-
-# Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
-
 # Dependency directories
-node_modules/
 jspm_packages/
-
-# TypeScript v1 declaration files
-typings/
 
 # Optional npm cache directory
 .npm
-
-# Optional eslint cache
-.eslintcache
-
-# Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
 
 # Optional REPL history
 .node_repl_history
@@ -73,48 +62,37 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
-.env
-.env.test
+# Supabase files (không đẩy lên GitHub)
+supabase-setup-simple.sql
+enable-realtime.sql
+enable-realtime.js
+supabase-setup*.sql
+enable-*.sql
+disable-*.sql
 
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
+# Database dumps
+*.sql
+*.dump
 
-# Next.js build output
-.next
+# Setup scripts (không đẩy lên GitHub)
+test-*.js
+check-*.js
+fix-*.js
+import-*.js
 
-# Nuxt.js build / generate output
-.nuxt
-dist
+# Backup files
+*.bak
+*.backup
 
-# Gatsby files
-.cache/
-public
-
-# Storybook build outputs
-.out
-.storybook-out
-
-# Temporary folders
+# Temporary files
 tmp/
 temp/
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Local development files
+.local/
 
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+# Google Service Account files
+*.json
+!package.json
+!package-lock.json
+!tsconfig.json
