--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@mui/x-data-grid": "^8.9.1",
+    "@react-pdf/renderer": "^4.3.0",
     "@supabase/supabase-js": "^2.53.0",
     "@tanstack/react-query": "^5.83.0",
     "@testing-library/dom": "^10.4.0",
@@ -16,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/crypto-js": "^4.2.2",
     "@types/jest": "^27.5.2",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -27,6 +29,8 @@
     "google-auth-library": "^10.2.0",
     "googleapis": "^154.0.0",
     "jose": "^6.0.12",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
