--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jest": "^27.5.2",
     "@types/jspdf": "^1.3.3",
     "@types/node": "^16.18.126",
+    "@types/pdfmake": "^0.2.11",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/react-query": "^1.2.8",
@@ -31,6 +32,7 @@
     "jose": "^6.0.12",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "pdfmake": "^0.2.20",
     "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
